objects/DandB_SummaryItem__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_SummaryItem</relationshipLabel>
        <relationshipName>DandB_SummaryItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>samount__c</fullName>
        <label>samount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scount__c</fullName>
        <label>scount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stype__c</fullName>
        <label>stype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DandB_SummaryItem</label>
    <nameField>
        <label>DandB_SummaryItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_SummaryItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>